--- a/app/views/main.html
+++ b/app/views/main.html
@@ -4,7 +4,7 @@
     <li><a ng-href="#">About</a></li>
     <li><a ng-href="#">Contact</a></li>
   </ul>
-  <h3 class="text-muted">tabbit</h3>
+  <h3 class="text-muted">Mixy</h3>
 </div>
 
 
@@ -71,5 +71,5 @@
   </div>
 
 <div class="footer">
-  <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+  Matthew Shawkat, 2014
 </div>
